--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,26 @@ volumes:
   postgres_data:
 
 services:
-  web:
+  migrate: &app
     build:
       context: .
-      dockerfile: Dockerfile
     volumes:
       - .:/usr/src
-    depends_on:
+    command: dotnet ef database update
+    depends_on: 
       - postgres
-    ports:
-      - ${EJEMPLO_WEB_PORT:-5000}:5000
     environment:
       DATABASE_URL: postgres://postgres:3x4mpl3P455@postgres:5432/demo_development
+      PORT: ${EJEMPLO_WEB_PORT:-5000}
+
+  web:
+    <<: *app
+    command: dotnet watch run 
+    depends_on: 
+      - postgres
+      - migrate    
+    ports:
+      - ${EJEMPLO_WEB_PORT:-5000}:5000
 
   postgres:
     image: postgres:11-alpine
